--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
             <optional>true</optional>
             <version>1.18.34</version>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
